--- a/src/main/resources/assets/humanity/lang/en_us.json
+++ b/src/main/resources/assets/humanity/lang/en_us.json
@@ -2,5 +2,6 @@
   "entity.humanity.human": "Human",
   "item.humanity.human_spawn_egg": "Human Spawn Egg",
   "gui.humanity.status": "Status",
-  "gui.humanity.inventory": "Inventory"
+  "gui.humanity.inventory": "Inventory",
+  "block.humanity.doorplate": "Doorplate"
 }
