--- a/src/main/resources/assets/humanity/lang/en_us.json
+++ b/src/main/resources/assets/humanity/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "entity.humanity.human": "Human",
+  "entity.humanity.activate_grid": "Activate Grid",
   "item.humanity.human_spawn_egg": "Human Spawn Egg",
   "gui.humanity.status": "Status",
   "gui.humanity.inventory": "Inventory",
